--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/middleware.ts", "src/pages/publication/new.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/middleware.ts", "src/pages/publication/new.tsx", "src/pages/404.tsx", "[...not_found]/page.js"],
   "exclude": ["node_modules"]
 }
